--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Federal School of Surveying, Oyo — Centre of Excellence</title>
+    <title>Federal School of Surveying, Oyo</title>
+    <link rel="icon" type="image/x-icon" href="images/FSS_LOGO.png" />
+
     <meta
       name="description"
       content="Federal School of Surveying, Oyo — Premier institution for Geospatial & Surveying education in Nigeria. Admissions, news, and academic programmes."
@@ -20,7 +22,7 @@
     <!-- Icons -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
     <!-- CSS -->
@@ -28,164 +30,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="site-header">
-      <div class="top-bar">
-        <div class="container top-bar-inner">
-          <div class="contact-info">
-            <a href="tel:+2348138261833"
-              ><i class="fa fa-phone"></i> +234-813 826 1833</a
-            >
-            <a href="mailto:info@fss-oyo.edu.ng"
-              ><i class="fa fa-envelope"></i> info@fss-oyo.edu.ng</a
-            >
-          </div>
-          <div class="social-links">
-            <a href="#" aria-label="Facebook"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="main-header">
-        <div class="container header-inner">
-          <a href="#" class="brand">
-            <img
-              src="images/FSS_LOGO.png"
-              alt="FSS Oyo Logo"
-              width="60"
-              height="60"
-            />
-            <div class="brand-text">
-              <span class="brand-name">Federal School of Surveying</span>
-              <span class="brand-location">Oyo, Nigeria</span>
-            </div>
-          </a>
-
-          <button
-            class="mobile-toggle"
-            aria-controls="primary-navigation"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Menu</span>
-            <i class="fa fa-bars"></i>
-          </button>
-
-          <nav id="primary-navigation" class="primary-nav">
-            <ul class="nav-list">
-              <button class="mobile-close-btn">
-                <i class="fa fa-times"></i>
-              </button>
-              <li><a href="#hero" class="active">Home</a></li>
-              <li class="has-dropdown">
-                <a href="#about"
-                  >The School
-                  <i
-                    class="fa fa-chevron-down"
-                    style="font-size: 0.7em; margin-left: 4px"
-                  ></i
-                ></a>
-                <div class="mega-menu">
-                  <div class="mega-grid">
-                    <div class="mega-col about-col">
-                      <h4>About Us</h4>
-                      <p>
-                        Established in 1908, the Federal School of Surveying,
-                        Oyo is the premier institution for surveying and
-                        geoinformatics in Nigeria, dedicated to excellence in
-                        training and research.
-                      </p>
-                      <a href="#about" class="learn-more">Read More &rarr;</a>
-                    </div>
-                    <div class="mega-col">
-                      <h4>FSS</h4>
-                      <ul>
-                        <li><a href="#">Vision & Mission</a></li>
-                        <li><a href="#">School Anthem</a></li>
-                        <li><a href="#">Our History</a></li>
-                      </ul>
-                    </div>
-                    <div class="mega-col">
-                      <h4>Administration</h4>
-                      <ul>
-                        <li><a href="#">Governing Council</a></li>
-                        <li><a href="#">Academic Board</a></li>
-                        <li><a href="#">The Rector</a></li>
-                        <li><a href="#">Deputy Rector</a></li>
-                        <li><a href="#">Dean of Students</a></li>
-                      </ul>
-                    </div>
-                    <div class="mega-col">
-                      <h4>Principal Officers</h4>
-                      <ul>
-                        <li><a href="#">The Registrar</a></li>
-                        <li><a href="#">The Bursar</a></li>
-                        <li><a href="#">The Librarian</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="has-dropdown">
-                <a href="#programmes"
-                  >Academics <i class="fa fa-chevron-down"></i
-                ></a>
-                <div class="mega-menu">
-                  <div class="mega-grid mega-grid-3">
-                    <div class="mega-col about-col">
-                      <h4>Faculties</h4>
-                      <p>
-                        There are 2 faculties in Federal School of Surveying,
-                        Oyo namely: Faculty of Geospatial Sciences and Faculty
-                        of Pure & Applied Sciences.
-                      </p>
-                    </div>
-                    <div class="mega-col">
-                      <h4>Faculty of Geospatial Sciences</h4>
-                      <ul>
-                        <li><a href="#">Surveying & Geoinformatics</a></li>
-                        <li><a href="#">Cartography & GIS</a></li>
-                        <li><a href="#">Photogrammetry & Remote Sensing</a></li>
-                      </ul>
-                    </div>
-                    <div class="mega-col">
-                      <h4>Faculty of Pure & Applied Sciences</h4>
-                      <ul>
-                        <li><a href="#">Computer Science</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="has-dropdown">
-                <a href="#admissions"
-                  >Admissions <i class="fa fa-chevron-down"></i
-                ></a>
-                <ul class="simple-dropdown">
-                  <li><a href="#">Admission Requirements</a></li>
-                  <li><a href="#">Admission Portal</a></li>
-                </ul>
-              </li>
-              <li class="has-dropdown">
-                <a href="#">Portal Login <i class="fa fa-chevron-down"></i></a>
-                <ul class="simple-dropdown">
-                  <li><a href="#">Students Portal</a></li>
-                  <li><a href="#">Staff Portal</a></li>
-                </ul>
-              </li>
-              <li><a href="#news">News</a></li>
-              <li>
-                <a href="#contact" class="btn btn-sm btn-primary">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
+    <site-header base-path="."></site-header>
 
     <main id="main-content">
       <!-- Hero Section -->
@@ -324,13 +169,64 @@
         </div>
       </section>
 
+      <!-- Rector's Welcome Section -->
+      <section id="rector-welcome" class="section">
+        <div class="container">
+          <div class="grid grid-2 align-center">
+            <div class="rector-image reveal reveal-left">
+              <!-- Placeholder image, user to update -->
+              <img
+                src="images/Rector.webp"
+                alt="Rector of FSS Oyo"
+                class="rector-img-style"
+              />
+              <div class="rector-name-tag">
+                <strong>Surv. (Mrs.) D. N. Olayinka-Dosunmu,</strong>
+                <span>PhD, fnis, fgeoson, mnes </span>
+                <span>Rector, FSS Oyo</span>
+              </div>
+            </div>
+            <div class="rector-content reveal reveal-right stagger-delay">
+              <span class="section-badge">Welcome Message</span>
+              <h2>FSS Oyo: We Pioneer Geoinformatics Education in Nigeria</h2>
+              <div class="content-text">
+                <p>
+                  I welcome you to Federal School of Surveying, Oyo — the beacon
+                  of Surveying and Geoinformatics education in Nigeria and
+                  Sub-Saharan Africa. Here, professionals and technologists in
+                  the field of Land Surveying, Geoinformatics, and other related
+                  programmes are trained for the development of the National
+                  Economy.
+                </p>
+                <p>
+                  As a pioneer in Surveying Education and a Centre of
+                  Excellence, our aim is to strive at producing graduates who
+                  shall be sound and proficient in the practice of the
+                  profession.
+                </p>
+                <p>
+                  You are welcome to explore our website for adequate
+                  information on the activities in the School.
+                </p>
+              </div>
+              <img
+                src="images/signature.png"
+                alt="Rector's Signature"
+                class="signature-img"
+                style="opacity: 0.6; margin-top: 1rem; max-width: 150px"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- About Section -->
       <section id="about" class="section about-section">
         <div class="container">
           <div class="grid grid-2">
-            <div class="about-content reveal">
+            <div class="about-content reveal reveal-left">
               <span class="section-badge">Who We Are</span>
-              <h2>Pioneering Surveying Education in West Africa</h2>
+              <h2>Our History</h2>
               <p>
                 Established as the first of its kind, the Federal School of
                 Surveying, Oyo has a rich history of academic excellence and
@@ -343,8 +239,10 @@
                   <div>
                     <h3>Our Mission</h3>
                     <p>
-                      To provide high-quality training, research, and service in
-                      surveying and geospatial sciences.
+                      To produce Professionals, Technologists, and Technicians
+                      in the Field of Surveying and Geoinformatics for the
+                      National Economy in a sustainable and conducive learning
+                      environment.
                     </p>
                   </div>
                 </div>
@@ -353,15 +251,18 @@
                   <div>
                     <h3>Our Vision</h3>
                     <p>
-                      To be a leading centre for geospatial education, producing
-                      skilled professionals and innovators.
+                      To be a pioneer in Surveying Education and Centre of
+                      Excellence, producing graduates who are sound, technically
+                      confident, and maintain high ethical standards.
                     </p>
                   </div>
                 </div>
               </div>
-              <a href="#" class="btn btn-secondary">Read History</a>
+              <a href="pages/about/about-us.html" class="btn btn-secondary"
+                >Read History</a
+              >
             </div>
-            <div class="about-image reveal">
+            <div class="about-image reveal reveal-zoom">
               <img
                 src="images/Picture3.jpg"
                 alt="FSS Students in Lab"
@@ -467,14 +368,19 @@
       <section id="admissions" class="section cta-section">
         <div class="container">
           <div class="cta-inner">
-            <div class="cta-content">
+            <div class="cta-content reveal reveal-zoom">
               <h2>Ready to Start Your Journey?</h2>
               <p>
                 Admissions for the 2024/2025 academic session are currently
                 ongoing. Check the requirements and apply today.
               </p>
               <div class="cta-btns">
-                <a href="#" class="btn btn-white">Admission Portal</a>
+                <a
+                  href="https://applications.fss-oyo.edu.ng/"
+                  class="btn btn-white"
+                  target="_blank"
+                  >Admission Portal</a
+                >
                 <a href="#" class="btn btn-outline-white">View Requirements</a>
               </div>
             </div>
@@ -486,7 +392,7 @@
       <section id="contact" class="section bg-light">
         <div class="container">
           <div class="grid grid-2">
-            <div class="contact-form-wrap">
+            <div class="contact-form-wrap reveal reveal-left">
               <h3>Get in Touch</h3>
               <p>Have questions? We'd love to hear from you.</p>
               <form id="contact-form" class="modern-form">
@@ -526,7 +432,7 @@
               </form>
             </div>
 
-            <div class="contact-info-wrap">
+            <div class="contact-info-wrap reveal reveal-right">
               <div class="info-card">
                 <h3>Contact Info</h3>
                 <ul class="info-list">
@@ -540,11 +446,17 @@
                   </li>
                   <li>
                     <i class="fa fa-phone"></i>
-                    <span>+234-813 826 1833</span>
+                    <span
+                      ><a href="tel:+2348138261833"> +234-813 826 1833</a></span
+                    >
                   </li>
                   <li>
                     <i class="fa fa-envelope"></i>
-                    <span>info@fss-oyo.edu.ng</span>
+                    <span
+                      ><a href="mailto:info@fss-oyo.edu.ng"
+                        >info@fss-oyo.edu.ng</a
+                      ></span
+                    >
                   </li>
                 </ul>
 
@@ -567,58 +479,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="site-footer">
-      <div class="container">
-        <div class="footer-top grid grid-4">
-          <div class="footer-brand reveal stagger-delay">
-            <img src="images/FSS_LOGO.png" alt="Logo" width="50" />
-            <h4>Federal School of Surveying</h4>
-            <p>Building the future of Geospatial Sciences in Nigeria.</p>
-          </div>
+    <site-footer base-path="."></site-footer>
 
-          <div class="footer-links reveal stagger-delay">
-            <h5>Quick Links</h5>
-            <ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#programmes">Programmes</a></li>
-              <li><a href="#admissions">Admissions</a></li>
-              <li><a href="#portal">Student Portal</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-links reveal stagger-delay">
-            <h5>Resources</h5>
-            <ul>
-              <li><a href="#">Library</a></li>
-              <li><a href="#">Alumni</a></li>
-              <li><a href="#">Staff Mail</a></li>
-              <li><a href="#">Support</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-newsletter reveal stagger-delay">
-            <h5>Newsletter</h5>
-            <p>Subscribe to get the latest school news.</p>
-            <form class="newsletter-form">
-              <input type="email" placeholder="Enter email" />
-              <button type="submit"><i class="fa fa-paper-plane"></i></button>
-            </form>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <p>
-            &copy; <span id="current-year">2024</span> Federal School of
-            Surveying, Oyo. All rights reserved.
-          </p>
-          <div class="bottom-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Use</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-
+    <script src="js/components.js"></script>
     <script src="js/main.js" defer></script>
   </body>
 </html>
