--- a/pages/about/principal-officers.html
+++ b/pages/about/principal-officers.html
@@ -19,23 +19,8 @@
   <body>
     <site-header base-path="../.."></site-header>
     <main id="main-content">
-      <section
-        class="hero-section"
-        style="
-          height: 300px;
-          background: linear-gradient(135deg, var(--clr-navy) 0%, #1e293b 100%);
-        "
-      >
-        <div
-          class="container"
-          style="
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-          "
-        >
+      <section class="page-hero">
+        <div class="container page-hero-content">
           <nav aria-label="breadcrumb" class="breadcrumb">
             <ol>
               <li><a href="../../index.html">Home</a></li>
@@ -45,16 +30,8 @@
               <li class="current">Principal Officers</li>
             </ol>
           </nav>
-          <h1 style="color: white; font-size: 3rem; margin: 0">
-            Principal Officers
-          </h1>
-          <p
-            style="
-              color: rgba(255, 255, 255, 0.9);
-              font-size: 1.1rem;
-              margin-top: 0.5rem;
-            "
-          >
+          <h1 class="page-title">Principal Officers</h1>
+          <p class="page-subtitle">
             Key leadership of the Federal School of Surveying, Oyo
           </p>
         </div>
