--- a/index.html
+++ b/index.html
@@ -381,7 +381,12 @@
                   target="_blank"
                   >Admission Portal</a
                 >
-                <a href="#" class="btn btn-outline-white">View Requirements</a>
+                <a
+                  href="https://applications.fss-oyo.edu.ng/(S(rnvzik3gjvpfvi5q3m4vwzi3))/ProgrammeEntryRequirements.aspx"
+                  class="btn btn-outline-white"
+                  target="_blank"
+                  >View Requirements</a
+                >
               </div>
             </div>
           </div>
@@ -403,7 +408,7 @@
                     id="name"
                     name="name"
                     required
-                    placeholder="Olawale Ganiyu"
+                    placeholder="Ibrahim Olawale"
                   />
                 </div>
                 <div class="form-group">
