--- a/index.html
+++ b/index.html
@@ -128,15 +128,9 @@
       <div class="announcement-bar">
         <div class="container ticker-wrap">
           <span class="ticker-label">Latest Updates:</span>
-          <div class="ticker-content" style="flex: 1">
-            <marquee
-              behavior="scroll"
-              direction="left"
-              id="announcement-marquee"
-              onmouseover="this.stop();"
-              onmouseout="this.start();"
-            >
-              Loading announcements...
+            <marquee class="ticker-content" behavior="scroll" direction="left">
+              The school resumes on Monday, 5th January, 2026 | Welcome to the new FSS Oyo website! | Admission forms are now
+              available online. | Check the news section for the latest events.
             </marquee>
           </div>
         </div>
