--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container slide-content">
               <h1>
                 <span class="reveal">Admissions Ongoing</span>
-                <span class="text-highlight reveal">2024/2025 Session</span>
+                <span class="text-highlight reveal">2025/2026 Session</span>
               </h1>
               <p class="reveal">
                 Take the first step towards a successful career in Surveying and
@@ -130,7 +130,12 @@
       <div class="announcement-bar">
         <div class="container ticker-wrap">
           <span class="ticker-label">Latest Updates:</span>
-            <marquee class="ticker-content" behavior="scroll" direction="left">
+            <marquee class="ticker-content" 
+              behavior="scroll"
+              direction="left"
+              onmouseover="this.stop();"
+              onmouseout="this.start();"
+              >
               Welcome to the new FSS Oyo website! | The matriculation ceremony for newly admitted 
               students is scheduled to hold on Wednesday, January 22, 2026. | 
               The school resumes on Monday, 5th January, 2026 | Admission forms are now
@@ -497,3 +502,4 @@
     <script src="js/main.js" defer></script>
   </body>
 </html>
+
